www/css/less/startpage.less
.startPage {
	.threeBigSections {

		h2 {
			margin-bottom: 0;

			img {
				margin: 0 10px 5px 10px;
			}
		}
		.thumbnail {
			position: relative;

			button {
				position: absolute;
				bottom:   15px;
				right:    15px;
			}
		}
		.desc {
			padding: 5px;

			.recent {
				margin:  10px 5px;
				display: block;
			}
		}
	}

	.advantages {
		ul {
			list-style: none;

			li {
				color:       #999;
				padding:     0 0 0 75px;
				font-size:   18px;
				line-height: 70px;

			}
		}
		.start-now {
			color:       @colorStandardFirst;
			padding:     0 0 0 75px;
			font-size:   18px;
			line-height: 70px;
		}
		.platform {
			background:          url("/img/icons/startpage/platform.png") no-repeat;
			background-position: 21px 17px;
		}

		.global {
			background:          url("/img/icons/startpage/global.png") no-repeat;
			background-position: 21px 17px;
		}

		.share {
			background:          url("/img/icons/startpage/share.png") no-repeat;
			background-position: 21px 17px;
		}

		.contacts {
			background:          url("/img/icons/startpage/contacts.png") no-repeat;
			background-position: 21px 17px;
		}

		.be-a-part {
			background:          url("/img/icons/startpage/be-a-part.png") no-repeat;
			background-position: 21px 17px;
		}
	}
	.startPageFeed {
		min-height: 462px;
		width:      320px;
		border:     1px solid @colorLiveFeed;
		position:   relative;
		z-index:    1;

		.feedControl {
			background:  @colorLiveFeed;
			color:       white;
			text-align:  center;
			line-height: 20px;
			display:     block;
			width:       100%;
			position:    absolute;
			bottom:      0;
			left:        0;
		}
		a:hover {
			text-decoration: none;
		}

		.feedOverlay {
			position:   absolute;
			left:       0;
			top:        0;
			height:     100%;
			width:      100%;
			opacity:    0.8;
			z-index:    1000;
			background: url("/img/icons/startpage/loadCircle.gif") white center center no-repeat;

			&hidden {
				dislay: none;
			}
		}

		.feedContent {
			.headline,
			.author {
				padding: 0 0 0 30px;
			}

			.headline {
				font-size:   18px;
				font-weight: bold;
			}

			.author {
				color: #999;
			}

			li {
				height:             80px;
				display:            block;
				padding:            15px;
				border-bottom:      1px solid @colorLiveFeed;
				box-shadow:         inset 0px 0px 2px 1px rgba(102, 102, 102, 0.5);
				-webkit-box-shadow: inset 0px 0px 2px 1px rgba(102, 102, 102, 0.5);
				-moz-box-shadow:    inset 0px 0px 2px 1px rgba(102, 102, 102, 0.5);

				&.challenge {
					background: url("/img/icons/challenge.png") 16px 18px no-repeat;
				}

				&.idea {
					background: url("/img/icons/idea.png") 16px 18px no-repeat;
				}

				&.vision {
					background: url("/img/icons/vision.png") 16px 18px no-repeat;
				}
			}
		}

	}
}

